aws/projects/kittens_carousel_website/2022136cXD-cfn.yml
AWSTemplateFormatVersion : 2010-09-09

Description : |
  This CloudFormation Template was written for 
  running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be 
  deployed on Amazon Linux 2 
  (ami-0022f774911c1d690) EC2 Instance with 
  custom security group which allows http 
  connections on port 80 and ssh port 22 from 
  anywhere. Kittens Carousel Static Website 
  is downloaded from my Public Github repository,
  then deployed on Apache Web Server.
Resources:
  cfnwebserver:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection.
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Access for Http connection of Webserver . 
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          Description: SSH ACCESS FOR CONFIGURATION. 
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22  
  WebHost:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0022f774911c1d690
      KeyName: Myfirstkey
      
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref cfnwebserver
      Tags:
        - Key : Name
          Value : !Sub Web Server of ${AWS::StackName} Stack
      UserData:
       Fn::Base64:
        !Sub |
          #!/bin/bash
          yum update -y
          yum install httpd -y
          yum install git -y
          systemctl enable httpd 
          systemctl start httpd 
          git clone https://github.com/MCANMCAN/my-projects.git
          cd my-projects/AWS/kittens_carousel_website/
          rm -rf /var/www/html/index.html
          cp ./static-web/* /var/www/html/
          systemctl restart httpd
Outputs:
  WebsiteURL:
      Value: !Sub
        - http://${PublicAddress}
        - PublicAddress: !GetAtt WebHost.PublicDnsName
      Description: Kittens Carousel Application URL
